--- a/AluraBooks-main/AluraBooks-main/styles.css
+++ b/AluraBooks-main/AluraBooks-main/styles.css
@@ -1,16 +1,15 @@
+@import url("styles/header.css");
+
 :root { 
     --cor-de-fundo:#FFD1DC;
+    --verde:#b1fffb;
 }
 
 body{
     background-color: var(--cor-de-fundo);
+    
 }
-
-
-
-
-
-
+   
 
 
 
